2001-05-25  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-expand-file-name-as-url): Remove handling
	'about://dtree'.
	(w3m-local-content-type): Ditto.
	(w3m-url-local-p): Ditto.
	(w3m-local-directory-view-method): New variable.
	(w3m-local-retrieve): If url is directory, call w3m by way of kick
	'dirlist.cgi'
	(w3m-url-dtree-p): New defsubst.
	(w3m-edit-current-url, w3m-edit-this-url): Use w3m-url-dtree-p().
	(w3m-goto-url-localcgi-movepoint): New function.
	(w3m-goto-url): If URL is a local directory, check and change URL
	by the use of 'w3m-local-directory-view-method'.
	If URL type is a local cgi, move to its directory point.

2001-05-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-xmas.el (w3m-euc-japan-decoder): Check if
	`emacs-major-version' is 21 instead of 20 and check for
	`emacs-beta-version' instead of `emacs-patch-level'.
	(w3m-should-unoptimize-animated-gifs): Ditto.

2001-05-25  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-xmas.el (w3m-euc-japan-decoder): Fix typo.

2001-05-24  Katsumi Yamaoka  <yamaoka@jpl.org>

	NOTE: `emacs-patch-level' vs `emacs-beta-version'
	=================================================
	The beta versions of XEmacs (e.g. XEmacs 21.5) designates its beta-
	level in the constant `emacs-beta-version' as a number, however,
	the value of `emacs-patch-level' is nil.  Otherwise, for the stable
	versions (e.g. 21.1.14) or the gamma versions (e.g. 21.4.3), the
	constant `emacs-patch-level' has a number of its patch-level and
	the value of `emacs-beta-version' is nil.

	Take heed that `emacs-patch-level' does not exist in FSFmacs or in
	XEmacs versions earlier than 21.1.1, and also `emacs-beta-version'
	does not exist in FSFmacs or in XEmacs versions earlier than 20.3.

	* w3m-xmas.el (w3m-euc-japan-decoder): Don't check for the constant
	`emacs-patch-level' when the beta versions of XEmacs is running.

2001-05-24  Akihiro Arisawa  <ari@mbf.sphere.ne.jp>

	* shimbun/sb-h14m.el: New file.
