@@ -1,3 +1,15 @@
+2001-05-25  Akihiro Arisawa  <ari@mbf.sphere.ne.jp>
+
+	* shimbun/sb-mhonarc.el (shimbun-mhonarc-get-headers): Redefine
+	as macro.
+	* shimbun/sb-airs.el (shimbun-get-headers): Follow the change above.
+	* shimbun/sb-glimpse.el (shimbun-get-headers): Ditto.
+	* shimbun/sb-h14m.el (shimbun-get-headers): Ditto.
+	* shimbun/sb-meadow.el (shimbun-get-headers): Ditto.
+	* shimbun/sb-namazu.el (shimbun-get-headers): Ditto.
+
+	* shimbun/sb-xemacs.el (shimbun-xemacs-url): Fixed.
+
 2001-05-25  Hideyuki SHIRAI  <shirai@meadowy.org>
 
 	* w3m.el (w3m-expand-file-name-as-url): Remove handling
